--- a/themes/main/templates/index.html
+++ b/themes/main/templates/index.html
@@ -6,9 +6,9 @@
 	<div class="emblem">
 		<img src="{{ SITEURL }}/theme/images/emblemob.png">
 	</div>
-	<!-- <div class="title">
-		<p>КСК КАСКАД</p>
-	</div> -->
+	<div class="title">
+		<p>Московская область, Россия</p>
+	</div>
 	<div class="description">
 		<p>Приглашаем юных и взрослых любителей верховой езды в наш дружный коллектив!</p>
 
@@ -16,7 +16,7 @@
 
 <p>У нас по-домашнему уютно и комфортно. Вас ждут квалифицированные, доброжелательные тренеры, а очаровательные четвероногие партнеры рады поделиться своими умениями, помочь достичь спортивных успехов, подарить счастье общения и хорошее настроение! Наши ученики регулярно выступают на соревнованиях различного уровня, завоёвывая призовые места.</p>
 
-<p>Мы находимся на территории КСК "Созвездие". Всегда рады новым друзьям! Присоединяйтесь!</p>
+<p>Мы находимся на территории КСК "Созвездие", г. о. Раменское. Всегда рады новым друзьям! Присоединяйтесь!</p>
 <br>
 <a href="https://vk.com/ksknikolskoe"><i class="demo-icon icon-link-ext">&#xf08e;</i>Сообщество ВК</a>
 <br>
@@ -27,12 +27,12 @@
 	</div>
 </div>
 <div class="content">
-	<div class="usl" style='background-image: url("{{ SITEURL }}/theme/images/Vol.jpg")'><p>Вольтижировка</p></div>
-	<div class="usl" style='background-image: url("{{ SITEURL }}/theme/images/Dg.jpg")'><p>Джигитовка</p></div>
-	<div class='usl' style='background-image: url("{{ SITEURL }}/theme/images/VV2.jpg")'><p>Выездка</p></div>
-	<div class="usl" style='background-image: url("{{ SITEURL }}/theme/images/KK2.jpg")'><p>Конкур</p></div>
-	<div class="usl" style='background-image: url("{{ SITEURL }}/theme/images/Ccross2.jpg")'><p>Кросс</p></div>
-	<div class="usl" style='background-image: url("{{ SITEURL }}/theme/images/STRLjpg.jpg")'><p>Конная стрельба из лука</p></div>
+	<a class="usl" href="/vo" style='background-image: url("{{ SITEURL }}/theme/images/Vol.jpg")'><p>Вольтижировка</p></a>
+	<a class="usl" href="/d" style='background-image: url("{{ SITEURL }}/theme/images/Dg.jpg")'><p>Джигитовка</p></a>
+	<a class="usl" href="/str" style='background-image: url("{{ SITEURL }}/theme/images/STRLjpg.jpg")'><p>Конная стрельба из лука</p></a>
+	<a class='usl' href="/training" style='background-image: url("{{ SITEURL }}/theme/images/VV2.jpg")'><p>Выездка</p></a>
+	<a class="usl" href="/training" style='background-image: url("{{ SITEURL }}/theme/images/KK2.jpg")'><p>Конкур</p></a>
+	<a class="usl" href="/training" style='background-image: url("{{ SITEURL }}/theme/images/Ccross2.jpg")'><p>Кросс</p></a>
 </div>
 <div class="title1">
 		<b>Видео</b>
@@ -52,12 +52,12 @@
 		</div>
 </div>
 <div class="content">
+	<a class='gl' href="/theme/images/Z2mf_SaZNvw.jpg" style='background-image: url("/theme/images/Z2mf_SaZNvw.jpg")'><p></p></a>
+	<a class='gl' href="/theme/images/RpmQ5hKcQYs.jpg" style='background-image: url("/theme/images/RpmQ5hKcQYs.jpg")'><p></p></a>
 	<a class='gl' href="/theme/images/18.jpg" style='background-image: url("/theme/images/18.jpg")'><p></p></a>
 	<a class='gl' href="/theme/images/17.jpg" style='background-image: url("/theme/images/17.jpg")'><p></p></a>
 	<a class='gl' href="/theme/images/14.jpg" style='background-image: url("/theme/images/14.jpg")'><p></p></a>
 	<a class='gl' href="/theme/images/16.jpg" style='background-image: url("/theme/images/16.jpg")'><p></p></a>
-	<a class='gl' href="/theme/images/1.jpg" style='background-image: url("/theme/images/Ccross.jpg")'><p></p></a>
-	<a class="gl" href="/theme/images/19.jpg" style='background-image: url("/theme/images/19.jpg")'><p></p></a>
 </div>
 <a class="button_glbol" href="/allphoto"><b>Ещё фотографии</b></a>
 
@@ -68,4 +68,5 @@
 	<div class='titlef' style='text-align: right;'>Номер телефона отвечающего за сайт: <br><a href="tel:+79854751961" style='color: #FFBC39;'><b>+7 985 475-19-61</b></a> и <a href="https://vk.com/maxim_lyubertsy" style='color: #FFBC39;'>ВКонтакте</a></div>
 	<div class="contein"><b>© КСК Каскад | от <a href='https://vk.com/maxim_lyubertsy'>Максима Соколова</a></b></div>
 </div>
+<iframe src="https://yandex.ru/sprav/widget/rating-badge/68418847346?type=rating" width="150" height="50" frameborder="0"></iframe>
 {% endblock %}
