--- a/themes/main/templates/index.html
+++ b/themes/main/templates/index.html
@@ -27,9 +27,9 @@
 	</div>
 </div>
 <div class="content">
-	<a class="usl" href="/vo" style='background-image: url("{{ SITEURL }}/theme/images/Vol.jpg")'><p>Вольтижировка</p></a>
-	<a class="usl" href="/d" style='background-image: url("{{ SITEURL }}/theme/images/Dg.jpg")'><p>Джигитовка</p></a>
-	<a class="usl" href="/str" style='background-image: url("{{ SITEURL }}/theme/images/STRLjpg.jpg")'><p>Конная стрельба из лука</p></a>
+	<a class="usl" href="/Vo" style='background-image: url("{{ SITEURL }}/theme/images/Vol.jpg")'><p>Вольтижировка</p></a>
+	<a class="usl" href="/D" style='background-image: url("{{ SITEURL }}/theme/images/Dg.jpg")'><p>Джигитовка</p></a>
+	<a class="usl" href="/Str" style='background-image: url("{{ SITEURL }}/theme/images/STRLjpg.jpg")'><p>Конная стрельба из лука</p></a>
 	<a class='usl' href="/training" style='background-image: url("{{ SITEURL }}/theme/images/VV2.jpg")'><p>Выездка</p></a>
 	<a class="usl" href="/training" style='background-image: url("{{ SITEURL }}/theme/images/KK2.jpg")'><p>Конкур</p></a>
 	<a class="usl" href="/training" style='background-image: url("{{ SITEURL }}/theme/images/Ccross2.jpg")'><p>Кросс</p></a>
