--- a/themes/main/static/css/index.css
+++ b/themes/main/static/css/index.css
@@ -137,7 +137,7 @@ div .video iframe {
 	vertical-align: center;
 }
 .button_gl2:hover {
-	background-color: #4f7ddd;
+	background-color: #3275dd;
 }
 .button_gl2 b {
 	display: flex;
