--- a/themes/main/templates/base.html
+++ b/themes/main/templates/base.html
@@ -39,7 +39,7 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta name="yandex-verification" content="1427ee113cf28ca0" />
-	<title>{% block title %}КСК Каскад{% endblock %}</title>
+	<title>{% block title %}КСК "Каскад"{% endblock %}</title>
 
 	<link rel="icon" type="image/x-icon" href="/favicon.ico">
 	<link rel="preconnect" href="https://fonts.googleapis.com">
@@ -296,7 +296,7 @@
     resetPosition = true;
   }
 </script>
-	
+
 </head>
 <body>
 	<div class="container">
@@ -309,4 +309,5 @@
 		{% block content %}{% endblock %}
 	</div>
 </body>
+</div>
 </html>
